alot of changes on thanksgiving

--- a/sass/bootstrap/_utilities.scss
+++ b/sass/bootstrap/_utilities.scss
@@ -42,9 +42,9 @@
 //
 // Credit: HTML5 Boilerplate
 
-.hidden {
-  display: none !important;
-}
+// .hidden {
+//   display: none !important;
+// }
 
 
 // For Affix plugin
