--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,22 +7,27 @@
     
     {% include header.html %}
 
-    <a href="projects/100-icons/">
-        <div class="full-home bg parallax effects fadeInDown" style="background-image:url('img/100-icons/banner-lrg.gif');" data-img-width="1500" data-img-height="996" data-diff="150">
-            <div class="h-textarea fadeInDown">
-                <div class="h-textarea-inner">
-                    <div class="textarea-intro">
-                        <h5 class="white subheader uppercase">Web | Graphic Design</h5>
-                        <img src="img/homepage/img-introduction.png" alt="Tyler Brooks designs web design portfolio">
-                        <h6 class="uppercase small white">FREE Design Resources / Portfolio</h6>
-                    </div>
+    <!-- <div class="full-home bg-overlay parallax effects fadeInDown" style="background-image:url('img/background.jpg');z-index: 0; opacity: 0.5;" data-img-width="1500" data-img-height="996" data-diff="150"> -->
+
+    <div class="full-home parallax effects fadeInDown">
+        <div class="bg-overlay"></div>
+        <div class="h-textarea fadeInDown">
+            <div class="h-textarea-inner">
+                <div class="textarea-intro">
+                    <h5 class="white subheader uppercase">FREE Design Resources / Portfolio</h5>
+                    <h1 class="white uppercase large"><b>TYLER BROOKS</b><br>DESIGNS</h1>
+                    <h6 class="uppercase small white">A jekyll/Github pages site</h6>
                 </div>
             </div>
         </div>
-    </a>
-    <div style="clear:both;"></div>
+    </div>
+
     <div class="header-container fadeInDown2">
-        <a href="projects/100-icons/" class="header-link">100 Line Icons &rarr;</a>
+        <a href="{{ site.baseurl }}/about/" style="letter-spacing: 1px;" class="header-link">About Me &rarr;</a>
+    </div>
+
+    <div class="local-scroll come-in" style="transform: translateY(0px);">
+        <a href="#main" id="main" class="scroll-down come-in" style="transform: translateY(0px);"><i class="scroll-down-icon"></i><span>Scroll Down</span></a>
     </div>
 
     
@@ -39,232 +44,23 @@
             </div>
         </div>
 
-        <div class="work-item fadeInDown" data-width="1280" data-height="1400">
+        {% for item in site.data.locale.homepage.projects %}
+        <div class="work-item {{ item.animation }}" data-width="{{ item.data_width }}" data-height="{{ item.data_height }}">
             <div class="work-header">
-                <h3 class="small">ImNickSouza - Nick Souza Media</h3>
-                <span>Web Design</span>
-                <span>Portfolio Design</span>
+                <h3 class="small">{{ item.title }}</h3>
+                {{ item.tags }}
             </div>
             <div class="work-project">
-                <a href="projects/imnicksouza/">
-                    <div style="background-image: url('img/homepage/nsm.jpg');"></div>
+                <a href="{{ site.baseurl }}{{ item.link }}">
+                    <div style="background-image: url('{{ site.baseurl }}{{ item.img }}');"></div>
                 </a>
             </div>
             <div class="work-footer">
-                <span>IMNICKSOUZA.COM</span>
+                <span>{{ item.origin }}</span>
             </div>
         </div>
+        {% endfor %}
 
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">Free Annual Report Icon Set</h3>
-                <span>Illustrator</span>
-                <span>Icon Design</span>
-                <span>Web Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/free-icons/">
-                    <div style="background-image: url('img/homepage/free-icons.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>TYLERBROOKSDESIGNS.COM</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">Free Office Icon Set</h3>
-                <span>Illustrator</span>
-                <span>Icon Design</span>
-                <span>Web Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/icon-font/">
-                    <div style="background-image: url('img/homepage/icon-font.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>TYLERBROOKSDESIGNS.COM</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">Free Social Media Icons</h3>
-                <span>Illustrator</span>
-                <span>Icon Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/social-media-icons/">
-                    <div style="background-image: url('img/homepage/social.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>BEHANCE.NET</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">Free Minimal Browser</h3>
-                <span>Download</span>
-                <span>Illustrator</span>
-                <span>Photoshop</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/browser/">
-                    <div style="background-image: url('img/homepage/browser.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>TYLERBROOKSDESIGNS.COM</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">FitPotato</h3>
-                <span>Photoshop</span>
-                <span>Web Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/fit-potato/">
-                    <div style="background-image: url('img/homepage/fitpotato.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>99DESIGNS.COM</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">Boat Phone Backgrounds</h3>
-                <span>Graphic Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/boats/">
-                    <div style="background-image: url('img/homepage/boats.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>BOATUS FOUNDATION</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">Aviatrix App</h3>
-                <span>InDesign</span>
-                <span>Web Design</span>
-                <span>UX/UI App Templates</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/aviatrix-app/">
-                    <div style="background-image: url('img/homepage/aviatrix-app.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>ROGER WILLIAMS UNIVERSITY</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">Aviatrix Publication</h3>
-                <span>InDesign</span>
-                <span>Publication Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/aviatrix/">
-                    <div style="background-image: url('img/homepage/aviatrix.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>ROGER WILLIAMS UNIVERSITY</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">Icons</h3>
-                <span>Illustrator</span>
-                <span>Icon Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/icons/">
-                    <div style="background-image: url('img/homepage/icons.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>99DESIGNS.COM</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">Email Design</h3>
-                <span>Email Design</span>
-                <span>HTML</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/email/">
-                    <div style="background-image: url('img/homepage/email.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>BOATUS FOUNDATION</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="1400">
-            <div class="work-header">
-                <h3 class="small">Poster Designs</h3>
-                <span>Photoshop</span>
-                <span>Typography</span>
-                <span>Print Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/mountain/">
-                    <div style="background-image: url('img/homepage/posters.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>ROGER WILLIAMS UNIVERSITY</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small">E-Newsletter Promotion</h3>
-                <span>Email Design</span>
-                <span>HTML</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/e-newsletter/">
-                    <div style="background-image: url('img/homepage/helm-email.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>BOATUS FOUNDATION</span>
-            </div>
-        </div>
-
-        <div class="work-item module" data-width="1280" data-height="700">
-            <div class="work-header">
-                <h3 class="small"><i class="general-beer"></i> North Sundh Brewing</h3>
-                <span>Logo Design</span>
-            </div>
-            <div class="work-project">
-                <a href="projects/north-brewing/">
-                    <div style="background-image: url('img/homepage/north-brew2.jpg');"></div>
-                </a>
-            </div>
-            <div class="work-footer">
-                <span>TRY A HOME BREW</span>
-            </div>
-        </div>
     </main>
 
     {% include footer.html %}
