--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,6 +28,10 @@
                 </div>
             </div>
         </div>
+
+
+
+        {% if page.title == 'Tyler Brooks Designs' %}
         <section class="sharing-container">
             <div class="sharing-container-inner">
                 <div class="fb-share-button" data-href="http://tylerbrooksdesigns.com/" data-layout="button_count"></div>
@@ -35,6 +39,10 @@
                 <div><a class="twitter-share-button" data-hashtags="tylerbrooksdesigns" data-text="FREE Design Resources / Portfolio" data-url="http://goo.gl/UCmeXP" data-via="brooksrelyt" href="https://twitter.com/share">Tweet</a></div>
             </div>
         </section>
+        {% endif %}
+
+
+        
     </footer>
 
     <script src="{{ site.baseurl }}/js/vendor/jquery-2.1.1.js"></script>
