footer edits for mobile

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <footer class="footer bg-grey">
         <div class="footer-inner">
-            <div class="col-lg-3">
+            <div class="col-lg-3 clearfix">
                 <p><strong><a href="{{ site.baseurl }}">Tyler Brooks Designs</a></strong></p>
                 <p>FREE Design Resources / Portfolio</p>
                 <p>Web + Graphic + Design</p>
