--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -49,7 +49,7 @@
   line-height: 43px;
   white-space: nowrap;
   position: absolute;
-  bottom: 30px;
+  bottom: 23px;
   left: 50%;
   font-size: 12px;
   font-weight: 700;
@@ -208,7 +208,16 @@
 		    h1 {
 		    	line-height: 56px;
 		    	font-size: 56px;
-		    	margin-bottom: 0;
+		    	margin-bottom: 10px;
+		    	margin-top: 0;
+		    	letter-spacing: 1px;
+		    }
+		    h5 {
+		    	margin-bottom: 10px;
+		    	letter-spacing: 1px;
+		    }
+		    h6 {
+		    	letter-spacing: 1px;
 		    }
 
 		    img {
