--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}">
 
-    <link href="{{ site.baseurl }}/favicon.ico?" rel="shortcut icon" type="image/x-icon" />
+    <link href="{{ site.baseurl }}/img/favicon.ico?" rel="shortcut icon" type="image/x-icon" />
     <meta name="author" content="Tyler Brooks" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/style.css" />
 
