--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -116,6 +116,11 @@ img {
     -ms-interpolation-mode: bicubic;
 }
 
+// Container override
+.container {
+    // width: 78.750rem;
+}
+
 // List Styles
 ul,
 ol,
