--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,10 +15,10 @@
             <section class="bottom-nav" role="complementary">
                 <div class="info">
                     <header>
-                        <p>Web + Graphic + Design</p>   
+                        <p>Web + Design + Development</p>   
                     </header>
                     <div class="social">
-                            <a target="_blank" href="https://www.instagram.com/brooksrelyts/"><span class="icon-instagram"></span></a>
+                            <a target="_blank" href="https://www.instagram.com/brooksrelyt/"><span class="icon-instagram"></span></a>
                             <a target="_blank" href="http://codepen.io/brooksrelyt/"><span class="icon-codepen2"></span></a>
                             <a target="_blank" href="http://www.linkedin.com/pub/tyler-brooks/68/4a9/a4b"><span class="icon-linkedin2"></span></a>
                             <a target="_blank" href="http://www.behance.net/TylerBrooksDesigns"><span class="icon-behance"></span></a>
