--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,9 +1,27 @@
+<!DOCTYPE html>
+<html lang="en" class="no-js">
+    
+    {% include head.html %}
+
+<body>
+    
+    {% include header.html %}
+	
 	<div class="not-full bg parallax" style="background-image:url('{{ site.baseurl }}{{ page.banner }}');" data-img-width="1450" data-img-height="683" data-diff="100">
         <div class="bg-content">
-            <div class="bg-inner-content">
+<!--             <div class="bg-inner-content">
                 <img class="fadeInDown" itemprop="image" src="{{ site.baseurl }}{{ page.banner_inner }}" alt="{{ site.baseurl }}{{ page.banner_inner_alt }}">
-            </div>
+            </div> -->
         </div>
-    </div>
+    </div>   
+    
+    <main id="container" class="main-container" role="main"">
+        
+        {{ content }}
 
-    <!-- <div class="center-button"><a href="#work" class="down-arrow-btn"><span class="arrow-work"></span></a></div> -->
+    </main>
+
+    {% include footer.html %}
+
+</body>
+</html>
