--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,15 +11,7 @@
     <meta name="author" content="Tyler Brooks" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/style.css" />
 
-    {% if page.title == 'Tyler Brooks Designs' %}
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Tyler Brooks Graphic Design" />
-    <meta property="og:description" content="FREE Design Resources / Portfolio - Web + Graphic + Design" />
-    <meta property="og:url" content="http://tylerbrooksdesigns.com/" />
-    <meta property="og:site_name" content="Tyler Brooks Designs" />
-    <meta property="og:image" content="http://www.tylerbrooksdesigns.com/img/fb-og/tylerbrooks.jpg" />
-    {% endif %}
+    {% include /sections/fb-og.html %}
 
     <!--[if lt IE 9]>
         <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
