--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@
     
     {% include header.html %}
 
-    <!-- <div class="full-home bg-overlay parallax effects fadeInDown" style="background-image:url('img/background.jpg');z-index: 0; opacity: 0.5;" data-img-width="1500" data-img-height="996" data-diff="150"> -->
+    <!-- <div class="full-home bg-overlay parallax effects fadeInDown" style="background-image:url('{{ site.baseurl }}/img/background.jpg');z-index: 0; opacity: 0.5;" data-img-width="1500" data-img-height="996" data-diff="150"> -->
 
     <div class="full-home parallax effects fadeInDown">
         <div class="bg-overlay"></div>
