--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,433 +1,221 @@
-.nav-position {
-    position: relative;
-    
-    .nav-position-inner {
-        display: block;
-        margin: 0 auto;
-        position: absolute;
-        width: 100%;
-    }
-}
-
-// Navbar
-.navbar {
-    z-index: 16;
-    position: relative;
-    /*padding: 2.5rem 0;*/
-    margin-bottom: 0;
-
-    @include breakpoint(screen-xl) {
-
-    }
-    @include breakpoint(screen-lg) {
-
-    }
-    @include breakpoint(screen-md) {
-
-    }
-    @include breakpoint(screen-sm) {
-
-    }
-    @include breakpoint(screen-xs) {
-
-    }
-
-    li > a {
-        padding: 0;
-    }
-
-    .navbar-top {
-        padding: 3rem 0 1.5rem 0;
-        margin-bottom: 1.5rem;
-        border-bottom: 3px solid $white;
-
-/*        @include breakpoint(screen-sm) { border-bottom: none; }
-        @include breakpoint(screen-xs) { border-bottom: none; }*/
-        
-        .navbar-right {
-            margin-right: 0;
-        }
-    }
-}
-
-.navbar-header {
-    @include breakpoint(screen-xl) { display: block; }
-    @include breakpoint(screen-lg) { display: block; }
-    @include breakpoint(screen-md) { display: block; }
-    @include breakpoint(screen-sm) { margin: 0 auto; text-align: center; }
-    @include breakpoint(screen-xs) { margin: 0 auto; text-align: center; }
-
-    .btn {
-        font-size: 16px;
-        line-height: 24px;
-        padding-top: 9px;
-        padding-bottom: 9px;
-    }
-}
-
-.navbar-default {
-    border: none;
-}
-
-.nav-feature {
-    @include breakpoint(screen-xl) { display: block; }
-    @include breakpoint(screen-lg) { display: block; }
-    @include breakpoint(screen-md) { display: block; }
-    @include breakpoint(screen-sm) { display: none; }
-    @include breakpoint(screen-xs) { display: none; }
-
-    .nav-feature-btn {
-        font-size: 13px;
-        line-height: 57px;
-        text-transform: uppercase;
-        width: 225px;
-        text-align: center;
-        vertical-align: middle;
-
-        @include breakpoint(screen-lg) {
-            &:nth-child(1) {
-                display: none;
-            } 
-        }
-        @include breakpoint(screen-md) {
-            &:nth-child(-n+2) {
-                display: none;
-            } 
-        }
-        
-        a {
-            padding: 0.7rem 3rem !important;
-            color: $white;
-            border: 1px solid $white;
-            margin: 0 1rem;
-
-            &:hover, &:focus {
-                background-color: $umd_red !important;
-                border-color: $umd_red;
-            }
-        }
-
-        
-
-    }
-
-    & li:last-child a {
-        background-color: $red;
-        border: 1px solid $red;
-        margin: 0 0 0 1rem;
-
-        &:hover, &:focus {
-            background-color: $darkred !important;
-            border: 1px solid $darkred;
-        }
-
-        &:active {
-            background-color: $darkred !important;
-            border: 1px solid $darkred;
-        }
-    }
-}
-
-.navbar-default {
-    background-color: transparent;
-
-    .navbar-bottom {
-        margin: 0.5rem 0;
-        width: 100%;
-
-        @include breakpoint(screen-sm) {
-            background-color: $umd_offwhite;
-            margin: 0;
-            padding: 0;
-            padding-top: 44px;
-            top: -44px;
-            position: relative;
-
-        }
-        @include breakpoint(screen-xs) {
-            background-color: $umd_offwhite;
-            margin: 0;
-            padding: 0;
-            padding-top: 44px;
-            top: -44px;
-            position: relative;
-        }
-
-        .navbar-nav {
-            width: 100%;
-            text-align: center;
-            padding: 0;
-            font-size: 13px;
-
-            @include breakpoint(screen-sm) {
-                margin: 0;
-                padding: 0;
-                
-            }
-            @include breakpoint(screen-xs) {
-                margin: 0;
-                padding: 0;
-            }
-
-            a {
-                color: $white;
-                text-decoration: none;
-                list-style-type: none;
-                text-transform: uppercase;
-                display: inline-block;
-                letter-spacing: 1px;
-
-                @include breakpoint(screen-sm) {
-                    color: $umd_red !important;
-                    font-size: 21px;
-                    line-height: 26px;
-                    width: 100%;
-                    padding: 1rem 1.5rem;
-                    text-transform: none;
-                    font-weight: 300;
-                }
-
-                @include breakpoint(screen-xs) {
-                    color: $umd_red !important;
-                    font-size: 21px;
-                    line-height: 26px;
-                    width: 100%;
-                    padding: 1rem 1.5rem;
-                    text-transform: none;
-                    font-weight: 300;
-                }
-
-                &:hover, &:focus {
-                    text-decoration: underline;
-                    color: $white;
-                    /*background-color: red;*/
-
-                    @include breakpoint(screen-sm) {
-                        text-decoration: none;
-                        background-color: $umd_silver;
-                        color: $white;
-                    }
-                    @include breakpoint(screen-xs) {
-                        text-decoration: none;
-                        background-color: $umd_silver;
-                        color: $white;
-                    }
-                }
-
-                
-            }
-
-            > li {
-                float: none;
-                display: inline-block;
-
-                @include breakpoint(screen-sm) {
-                    width: 100%;
-                    border-bottom: 1px solid $umd_midgray;
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-                }
-                @include breakpoint(screen-xs) {
-                    width: 100%; 
-                    border-bottom: 1px solid $umd_midgray;
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-                }
-            }
-
-            > li + li {
-                margin-left: 6rem;
-
-                @include breakpoint(screen-sm) {
-                    margin-left: 0 !important;
-                }
-                @include breakpoint(screen-xs) {
-                    margin-left: 0 !important;
-                }
-
-                /*&:before {
-                    content: "/";
-                    color: $white;
-                    margin-right: 3rem;
-                    float: left;
-
-                    @include breakpoint(screen-sm) {
-                        content: none;
-                        margin-left: 0 !important;
-                    }
-                    @include breakpoint(screen-xs) {
-                        content: none; 
-                        margin-left: 0 !important;
-                    }
-                }*/
-            }
-        }
-    }
-}
-
-.nav-feature-btn {
-    .dropdown-menu {
-        margin-top: 0 !important;
-        transform: initial !important;
-
-        &::before {
-            display: none;
-        }
-    }
-}
-
-.navbar-toggle {
-    width: 100%;
-/*    width: calc(50% - 25px);
-    width: -o-calc(50% - 25px);
-    width: -ms-calc(50% - 25px);
-    width: -moz-calc(50% - 25px);
-    width: -webkit-calc(50% - 25px);*/
-
-    border-color: $white !important;
-    border-radius: 0;
-    margin: 0;
-    z-index: 1;
-
-    &:hover, &:focus {
-        background-color: $umd_red !important;
-        border-color: $umd_red !important;
-    }
-
-    .ham-label {
-        width: 85%;
-        position: absolute;
-        text-align: center;
-
-        span {
-            color: $white;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            text-align: center;
-            line-height: 24px;
-        }
-    }
-
-    .ham-bars {
-        float: right;
-        padding: 5px;
-
-        .icon-bar {
-            background-color: $white !important;
-        }
-    }
-    
-}
-
-.small-only {
+.hidden {
     display: none;
-
-    @include breakpoint(screen-xl) { display: none; }
-    @include breakpoint(screen-lg) { display: none; }
-    @include breakpoint(screen-md) { display: none; }
-
-    @include breakpoint(screen-sm) { 
-        display: block; 
-        border-bottom: 3px solid $umd_midgray; 
-
-        &.navbar-nav {
-            padding-bottom: 1rem !important;
-        }
-    }
-    @include breakpoint(screen-xs) { 
-        display: block; 
-        border-bottom: 3px solid $umd_midgray; 
-        
-        &.navbar-nav {
-            padding-bottom: 1rem !important; 
-        }
-    }
 }
 
-.dropdown-menu {
-    padding: 0;
-    margin-top: 1em !important;
-    -o-transform: translate(-50%, 0);
-    -ms-transform: translate(-50%, 0);
-    -moz-transform: translate(-50%, 0);
-    -webkit-transform: translate(-50%, 0);
-    transform: translate(-50%, 0);
-    left: 50%;
-    /*right: auto;*/
+.show-hide {
+    color: #34495e;
+    right: 25px;
+}
 
-    &::after, &::before {
-        bottom: 100%;
-        left: 50%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
+.header-bg {
+    /*background: rgba(52, 73, 94,1.0);*/
+    background: rgba(255,255,255,1.0);
+    /*background: white;*/
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+
+a.brand {
+    color: #fff;
+    float: left;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1em;
+    margin: 4px 0 0 auto;
+}
+
+#nav-toggle { 
+    position: absolute; 
+    cursor: pointer; 
+    padding: 10px 35px 16px 0px; 
+    z-index: 100;
+
+    & span, & span:before, & span:after {
+        cursor: pointer;
+        border-radius: 1px;
+        height: 5px;
+        width: 35px;
+        background: white;
         position: absolute;
-        pointer-events: none;
-    }
-    
-    &::after {
-        border-color: rgba(136, 183, 213, 0);
-        border-width: 10px;
-        margin-left: -10px;
-
-        @include breakpoint(screen-md) { display: none; }
-        @include breakpoint(screen-sm) { display: none; }
-        @include breakpoint(screen-xs) { display: none; }
+        display: block;
+        content: '';
     }
 
-    &::before {
-        border-bottom-color: $white;
-        border-width: 12px;
-        margin-left: -12px;
-
-        @include breakpoint(screen-md) { display: none; }
-        @include breakpoint(screen-sm) { display: none; }
-        @include breakpoint(screen-xs) { display: none; }
+    & span:before {
+        top: -10px; 
+    }
+    & span:after {
+        bottom: -10px;
     }
 
-    li {
-        a {
-            color: $umd_red !important;
-            padding: 1em 2em;
-            width: 100%;
-            display: block;
+    & span, & span:before, & span:after {
+        -ms-transition: all 500ms ease-in-out;
+        -webkit-transition: all 500ms ease-in-out;
+        transition: all 500ms ease-in-out;
+    }
+
+    &.active span {
+        background-color: transparent;
+    }
+    &.active span:before, &.active span:after {
+        top: 0;
+    }
+    &.active span:before {
+        -ms-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg);
+        background-color:#2c3e50;
+    }
+    &.active span:after {
+        -ms-transform: translateY(-10px) rotate(-45deg);
+        -webkit-transform: translateY(-10px) rotate(-45deg);
+        transform: translateY(-10px) rotate(-45deg);
+        top: 10px;
+        background-color:#2c3e50;
+    }
+
+    &.scroll span, &.scroll span:before, &.scroll span:after {
+        background: #2c3e50;
+    }
+    &.white span {
+        background: none;
+    }
+}
+
+.header {
+    color: #fff;
+    height: 55px;
+    z-index: 15;
+    left: 0;
+    top: 0;
+    width: 100%;
+    position: fixed;
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+    padding: 15px;
+
+    h1 {
+        color: #fff;
+        float: left;
+        font-size: 1.1em;
+        margin: 4px 0 0 auto;
+        font-weight: 300;
+        line-height: 1em;
+    }
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    right: -50px;
+    z-index: 10;
+    width: 40%;
+    height: 100%;
+    background-color: #34495e;
+    transition: height 0.3s ease-in-out 0s;
+
+    p {
+        color: #fff;
+        font-weight: 100;
+    }
+
+    ul {
+        list-style: none;
+        margin: 0 auto;
+        padding-top: 8em;
+        padding-bottom: 1.25em;
+        padding-left: 0px;
+        width: 100%;
+
+        li {
+            a {
+                display: block;
+                padding: 10px 80px;
+                outline: none;
+                color: #fff;
+                text-transform: uppercase;
+                letter-spacing: 1px;
+                font-size: 2.5em;
+                font-weight: 100;
+                transition: background 0s ease 0s, all 500ms ease 0s;
+                width: 500px;
+
+                &:hover {
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    font-weight: 100;
+                    color: $cool_blue;
+                    cursor: pointer;
+                }
+
+                span {
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+            }
         }
     }
 }
 
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  background-color: transparent !important;
-  color: $umd_red !important;
-}
+.bottom-nav {
+    color: #ecf0f1;
+    font-size: 0.8em;
+    padding: 10px 80px;
+    width: 400px;
 
-.navbar-nav {
-    .open {
-        .dropdown-menu {
-            @include breakpoint(screen-md) { position: relative; }
-            @include breakpoint(screen-sm) { position: relative; }
-            @include breakpoint(screen-xs) { position: relative; }
+    .info {
+        display: block;
+
+        .social {
+            a {
+                display: inline-block;
+                margin-right: 1em;
+                position: relative;
+                text-align: center;
+                text-decoration: none;
+
+                span {
+                    background: #2c3e50 none repeat scroll 0 0;
+                    border-radius: 100%;
+                    color: white;
+                    display: block;
+                    height: 30px;
+                    line-height: 30px;
+                    text-align: center;
+                    transition: background 0s ease 0s, all 500ms ease 0s;
+                    width: 30px;
+                }
+
+                &:last-child {
+                    margin-right: 0;
+                }
+
+                &:hover span {
+                    background: #2270cf;
+                    color: white;
+                }
+            }
         }
     }
 }
 
-a.dropdown-toggle {
-    @include breakpoint(screen-md) { background-color: $umd_silver !important; }
-    @include breakpoint(screen-sm) { background-color: $umd_silver !important; }
-    @include breakpoint(screen-xs) { background-color: $umd_silver !important; }
 
-    &:focus {
-        color: #ffffff !important;
-    }
-}
 
-.sub-nav {
-    @include breakpoint(screen-sm) { background-color: $umd_silver !important; }
-    @include breakpoint(screen-xs) { background-color: $umd_silver !important; }
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
