--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,6 +10,7 @@
     <!-- <div class="full-home bg-overlay parallax effects fadeInDown" style="background-image:url('{{ site.baseurl }}/img/background.jpg');z-index: 0; opacity: 0.5;" data-img-width="1500" data-img-height="996" data-diff="150"> -->
 
     <div class="full-home parallax effects fadeInDown">
+        <div class="full-home" style="background-image:url('{{ site.baseurl }}/img/background.jpg'); position: absolute; z-index: 1; opacity: 0.3;"></div>
         <div class="bg-overlay"></div>
         <div class="h-textarea fadeInDown">
             <div class="h-textarea-inner">
