--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,18 +1,18 @@
 @mixin breakpoint($point) {
     @if $point == screen-xl {
-	@media only screen and (min-width : 1200px) { @content; }
+	@media screen and (max-width: 1500px) { @content; }
 	}
 	@if $point == screen-lg {
-		@media only screen and (min-width : 992px) and (max-width : 1200px) { @content; }
+		@media screen and (max-width: 1024px) { @content; }
 	}
 	@else if $point == screen-md {
-		@media only screen and (min-width : 768px) and (max-width : 992px) { @content; }
+		@media screen and (max-width: 768px) { @content; }
 	}
 	@else if $point == screen-sm {
-		@media only screen and (min-width : 480px) and (max-width : 768px) { @content; }
+		@media screen and (max-width: 660px) { @content; }
 	}
 	@else if $point == screen-xs {
-		@media only screen and (max-width : 480px) { @content; }
+		@media screen and (max-width: 480px) { @content; }
 	}
 }
 
