--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -37,6 +37,10 @@
     position: relative;
     overflow: hidden;
 
+    @include breakpoint(screen-md) {
+        width: 100%;
+    }
+
     a:before {
 	    background: linear-gradient(to bottom, rgba(51, 51, 51, 0) 0%,
 	    	rgba(51, 51, 51, 0.5) 90%) repeat scroll 0 0 rgba(0, 0, 0, 0);
