--- a/sass/util/_animations.scss
+++ b/sass/util/_animations.scss
@@ -16,6 +16,13 @@
     -moz-animation-delay: 0.2s;
     -ms-animation-delay: 0.2s;
     animation-delay: 0.2s;
+
+    @include breakpoint(screen-md) {
+        -webkit-transform: translateY(0px);
+        -moz-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px);
+    }
 }
 
 .come-in:nth-child(odd) {
@@ -23,6 +30,13 @@
     -moz-animation-duration: 0.6s;
     -ms-animation-duration: 0.6s;
     animation-duration: 0.6s;
+
+    @include breakpoint(screen-md) {
+        -webkit-transform: translateY(0px);
+        -moz-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px);
+    }
 }
 
 @-webkit-keyframes come-in {
