--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -345,6 +345,21 @@
     
 }
 
+.small-banner {
+    display: none;
+
+    @include breakpoint(screen-md) {
+        display: block; 
+        height: 500px;
+    }
+}
+
+@include breakpoint(screen-md) {
+    #video {
+        display: none;
+        height: 500px;
+    }
+}
 
 
 
