--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,10 @@
     <![endif]-->    
 
     <script src="{{ site.baseurl }}/js/vendor/modernizr.js"></script>
+
+    <script>
+        var host = "brooksrelyt.github.io";
+        if ((host == window.location.host) && (window.location.protocol != "https:"))
+            window.location.protocol = "https";
+    </script>
 </head>
